# ChangeLog for dev-db/sqliteman
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/sqliteman/ChangeLog,v 1.8 2013/03/02 19:50:42 hwoarang Exp $

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> sqliteman-1.2.2.ebuild:
  Move Qt dependencies to the new category

  21 Apr 2012; Davide Pesavento <pesa@gentoo.org> metadata.xml:
  Remove redundant maintainer from metadata.

  17 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -sqliteman-1.2.1.ebuild, sqliteman-1.2.2.ebuild:
  Stable 1.2.2 on amd64 and x86. Drop older.

*sqliteman-1.2.2 (27 Jun 2010)

  27 Jun 2010; Dror Levin <spatz@gentoo.org> +sqliteman-1.2.2.ebuild:
  Version bump resolving compilation issue with Qt 4.7, bug 325881. Thanks
  to Alec Moskvin for reporting.

  02 Jan 2010; Ben de Groot <yngwin@gentoo.org> sqliteman-1.2.1.ebuild:
  Remove no longer needed qt4 use dep

  06 Sep 2009; Markus Meier <maekke@gentoo.org> sqliteman-1.2.1.ebuild:
  amd64/x86 stable, bug #282452

*sqliteman-1.2.1 (14 Mar 2009)

  14 Mar 2009; Tomas Chvatal <scarabeus@gentoo.org> -sqliteman-1.2.0.ebuild,
  +sqliteman-1.2.1.ebuild:
  Version bump. Remove old. Fixes bugs #255755 and #261495.

*sqliteman-1.2.0 (31 Dec 2008)

  31 Dec 2008; Ben de Groot <yngwin@gentoo.org> +metadata.xml,
  +sqliteman-1.2.0.ebuild:
  Initial commit, thanks to the users in bug 173637 and Sunrise who
  developed the ebuild.