@@ -2,25 +2,25 @@
 Hash: SHA256
 
 DIST sqliteman-1.2.2.tar.gz 1579855 SHA256 2229e627528ec02a9cf7aba3a65bef8999272fc25eb22112dc3f8ee583eb5dfb SHA512 ada8315247723c6cbb9a4c235ce427aed3fcbe6f4edaa3ee2f9c31c1729d71a4bfc874bb7ca561f2a2c9afad092e2f90c7871646eccecb3e71bcd50d1164faf4 WHIRLPOOL 73f6bee7a98e46ef6e76dca086f6cd9379f3f7c8574df70f92d21ac68def0aef548350877eda319d7bedd6b34f5f128db839ef1b2c583a7ad5565a4a78a42d6c
+EBUILD sqliteman-1.2.2-r1.ebuild 704 SHA256 546160dc75866896ea540c27658c0a03b8229b07fcc41b8831c63d37a0fa54fd SHA512 67c0cadbbdbab1d18203b2bd81bd71ee85bb0ebe750c1fc7073235061bc819e273e3fd4a5ad4a7adf4d5ad6237a7caf9089ea0588ee650b81e216aef6ea677da WHIRLPOOL 8fb236acd92a983aaa4ff63bb2872b567de01a08ed196fd81e5dfc858feb5d11c136fc3a479436021fff83aea94841facdcafb36a1302e723ca8ad24c0d979d0
 EBUILD sqliteman-1.2.2.ebuild 657 SHA256 90847d88028554c4640cdbd63a8bf67a16ec4b15611d2290f18d7d5c18b145e0 SHA512 712febd7c02c088d7acdec3cf51207e3c0cd1179c3fbc01d141e4ee439fc07a873d3afd34e662b58eabbb38e70322ae8c3845d180b339e1794715da96e9b80f3 WHIRLPOOL 8d9f4d5f50a9f776e78827a16154ba9fb99ad0955226edd07df3bbd36a61b73011d60f6674763fadbf9da42a96fdd707d08c1b854a25650ece1b4f55151d043e
-MISC ChangeLog 1428 SHA256 e1e422aac6c14b181e36e2f9f8f80051f60fa13a83217ef3c49513a732718f25 SHA512 b0bd277b3c3b47af216766e3c1f8b7de3f9445c68f769985bd1d6c85fe7861ee3bfc1cf35b0238356b0ad7bea82997434f5f095e3c30ff900050efe11efa3941 WHIRLPOOL 726fdcb896c58c994319afb77a94fc7dd0164b6892bedb3873565050b0c202857eaf5e82611a0b4f595a7c3f2dcc982a69cc40b88076d55c4850e68e25bb7f5f
+MISC ChangeLog 1573 SHA256 f1c50a023f71135466793fc3b681112c15152f2dd13cd11cf5022d830c22d4e9 SHA512 b7803fcbdbbd092f58a1e2d447de1f784acf73061b7db54650b617aa4b78f243b5e6788dc897dd5626a5ad74dce654ebbeb1bcb3e3eaa7e04b0b1bd72ec19aec WHIRLPOOL 5b6a5c2aba455aaf67f66afc52c8500c4f092e66d9b19a1ced3efa9c9231ce953bb65077cf9027ecb547648e36aae6e67a9272c9e75e065813345f2eb33d62af
 MISC metadata.xml 155 SHA256 94ed5876ef16dbc191744ff6b8939a0f428fcb8add316d898880e1c4c880b9e7 SHA512 f05c8982778167c3667c9246b9730ba49fec2967731ed2c615e31a7fddc220fcea8c0843caa70a14957c8c4910892c512b6f2e00a9724d65e6032e1289f4562a WHIRLPOOL 25ccd49f04da07c8525fe18b21229764bb4104938abefc6c953bf9caa533dd5c10ae7b3f80a1251182e6c1520c09383d9f1d0ac1dc74832a99299c9be27406c4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJRMlgQXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88FnkQAMaHtR8Ls1f4IsqzkrScOaMA
-L5FnOvfI3v7ixgFNy2mATd5X0APOB6VodOdDYAc9PssSw6JC43ESAd8pFjRR6OB2
-60HTHNMtLyzbNNVEpc/q9qOI1zhXEYMh+v7mWVEXJR5hMTEBaCkhQHwXGj3+Te8k
-nQgo3/cGzM8mMvqedAaLBF46nKvkfFD06UcqD2jW8OSMxMtBfVjmrbF103MkkV1/
-uAkv1DVlKYFC4CxG3wWlWGHFUvk+bAOQa3PzvLlxhdoy0p4AwAnMXotQ9EGlhaCw
-Hl5ZyJvvt0gjd4kJcTCpo8tO0PjzGqLu6JOB9j0X9b5p2YmCvAFa70oNVWPEKPeB
-qAUTVFUnuZ+5sPJzJ26YqwHRFYeMKtjaEvNyU6wo96ZDRN4maWTa1KHSS76WBH9a
-JgejfnUXW2q906sKX12LCvmzqZmnXswsUljfW5nsP2LYkFj4qLDMJtUqD8sWau/p
-M+5ZDDH7YFHM6ENbgHtqDjK5R40BBnaNguBevo1D6w8B8lJ7UuPZMSA9i0MoDmcA
-xyAjZwsq28/aAv00D61jMhy3N1X+R9cwjwFFG6xkvW0p89hV0e1kesccCvjL0rQj
-RTMLqOzaUgK3ycAaCq5rtPIkQyTm5K/sWzyaeQE3dxL/32n2rgxZ3alXyZbJeyyS
-Zbp5qZZbPQ8+UXX5JzF2
-=hFFJ
+iQJiBAEBCABMBQJVIBS5RRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7HryD/9QnfabbWA7ZNC8KjMbZmv1uSCCrXCLP0KCtiMcxrWtYYcMiWCLRd5LHeCn
+eF3ZNpKoWd4dn50cOooK9akt3E0sIzybFLH4n3YGu5HkAI6CjMg66Dq2a+03r1lH
+R79YYy1QO/6eQjJFDXAVyaXD2yaSkwsv4OlyOocvB2bBsrYgT2BodrSdNvrJJCOw
+VWlauHohMAyfPvFtGHpGCSgXGN/wh6NCOsnBuSdWCU5KpFXTYPruH44EUZzlp6Ct
+JOcwG8T97gWldRP4/IKklh+5UsCpbaBZzb79uF9XbPREoCsmeMmIaR1c0H+sqQed
+i0zWnT3988F4CnpR4S8atnXEtylsKt6DHRVm71/8l2XnmT5XDDXGEYX+zJ5Yy+Ag
+5UVTHHyca7ixO2JINEc1rkWiGZimqA5XoSl8l3BpJ3XKZ61AZMREb2hU9JhCOvC2
+7k5BUhIwUM+3881PAm0GRz5tuJ5BeqXr9dV2nJelnGMY9ysv9pM2eAiUgUrXLAXB
+kjQu5qj3of83h5mdBBLk8IP4UvjqkYgjUb+HsyWShkkJCQaWQgWUD8kWtyA7UTXf
+w49iNaTFkm/x0tWz+pgX+PgTv+UMca4ozi9BoRLLCpCUdAsOW921MqHX5zvhy/Tv
+n9rJl3ElmwHJcC2MUPOtJQNcSjsvkVFqWTHml54TBY8SlbF98w==
+=TpQA
 -----END PGP SIGNATURE-----
