@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/sqliteman
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqliteman/ChangeLog,v 1.8 2013/03/02 19:50:42 hwoarang Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqliteman/ChangeLog,v 1.9 2015/04/04 16:43:39 kensington Exp $
+
+*sqliteman-1.2.2-r1 (04 Apr 2015)
+
+  04 Apr 2015; Michael Palimaka <kensington@gentoo.org>
+  +sqliteman-1.2.2-r1.ebuild:
+  Migrate to EAPI 5.
 
   02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> sqliteman-1.2.2.ebuild:
   Move Qt dependencies to the new category
